# manwha-reader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  .flake8  Dockerfile  Makefile  crontab  docker-compose.yml  fly.toml  pyproject.toml
backend/.docker/postgres/: initdb.sql
backend/src/application/scraper/: __init__.py  inari.py
backend/src/application/scraper/scraper/: pipelines.py  settings.py
backend/src/domain/entities/: __init__.py  alternative_name.py  artist.py  author.py  chapter.py  genre.py  manwha.py  scraper.py
backend/src/domain/enums/: core.py  manwha.py  scraper.py
backend/src/domain/exceptions/: client.py  server.py
backend/src/domain/repository/: __init__.py  alternative_name.py  artist.py  author.py  chapter.py  genre.py  manwha.py  scraper.py
backend/src/domain/schemas/: __init__.py  alternative_name.py  artist.py  author.py  chapter.py  genre.py  manwha.py  scraper.py
backend/src/domain/use_cases/chapter/: check_new_chapters.py  get_chapter_pages.py  manage_chapters.py  upload_chapter_pages.py
backend/src/domain/use_cases/common/: download_image.py
backend/src/domain/use_cases/manwha/: create_manwha_to_scrape.py  delete_manwha_chapters.py  get_all_manwhas.py  get_manwha.py  get_manwhas.py  manage_manwha.py
backend/src/domain/use_cases/pagination/: get_limit_offset.py  prepare_pagination.py
backend/src/domain/use_cases/scraper/: __init__.py  base_scraper.py  create_manwha_to_scrape.py  get_readers.py  get_scraper_manwha.py  scrape_flower_manwhas.py  scrape_hari_manwhas.py  scrape_inari_manwhas.py  scrape_kingofshojo_manwhas.py  scrape_kun_manwhas.py  scrape_miau_manwhas.py  update_scraper_manwha.py
backend/src/domain/utils/: normalize.py
backend/src/infrastructure/config/: __init__.py
backend/src/infrastructure/log/: __init__.py
backend/src/infrastructure/persistence/: unit_of_work.py
backend/src/infrastructure/services/: aws.py  notifier.py  s3.py
backend/src/presentation/api/: exception_handlers.py  main.py
backend/src/presentation/api/v1/routers/: chapters.py  (+3 more)
backend/src/presentation/cronjobs/: run_scrapers.py
backend/tests/unit/domain/pagination/: test_get_limit_offset.py
(+80 files in other folders)
