[tool.poetry]
name = "manwha-reader"
version = "0.1.0"
description = ""
authors = ["christopherfrige <chrisfrige@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
boto3 = "^1.33.4"
scrapy = "^2.11.0"
pillow = "^10.1.0"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"*.py" = ["E712"]
"__init__.py" = ["F403", "F401"] # https://www.flake8rules.com/rules/F403.html
"conftest.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = ["I"]